랜덤추천 버튼 추가

--- a/src/components/MenuList.scss
+++ b/src/components/MenuList.scss
@@ -1,4 +1,12 @@
 .menuList {
+  header {
+    display: flex;
+    justify-content: space-between;
+    .randomButton {
+      display: flex;
+      align-items: center;
+    }
+  }
   ul {
     li {
       .wrapper {
