--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,14 @@
 .App {
   margin: 0 20px;
   text-align: left;
+  color: #333;
   .item {
     margin: 5px;
   }
   button {
     cursor: pointer;
+  }
+  input {
+    border: 1px solid #aaa;
   }
 }
