--- a/src/components/MenuList.scss
+++ b/src/components/MenuList.scss
@@ -11,6 +11,8 @@
     }
   }
   ul {
+    list-style-type: none;
+    padding-left: 0;
     li {
       .wrapper {
         margin-bottom: 0;
@@ -22,6 +24,7 @@
           display: flex;
           .desc {
             margin-right: 20px;
+            flex: 1;
             .url {
               color: darkolivegreen;
             }
