버튼 간격 조정

--- a/src/components/MenuList.scss
+++ b/src/components/MenuList.scss
@@ -41,8 +41,11 @@
               color: gray;
               cursor: pointer;
             }
-            button {
-              margin: 20px 2px;
+            .btnGroup {
+              padding-top: 10px;
+              button {
+                margin: 2px;
+              }
             }
           }
           .image {
