--- a/src/components/Loading.scss
+++ b/src/components/Loading.scss
@@ -1,10 +1,21 @@
+.modal_div {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  background-color: #111;
+}
+
 .Loading {
   position: fixed;
   top: 50%;
   left: 50%;
   //border: 1px solid black;
   background-color: #fff;
-  padding: 0px 10px;
+  //padding: 0px 10px;
+  height: 300px;
 
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
