--- a/src/components/Loading.scss
+++ b/src/components/Loading.scss
@@ -12,14 +12,14 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  //border: 1px solid black;
-  background-color: #fff;
-  //padding: 0px 10px;
-  height: 300px;
 
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+
+  img {
+    width: 100%;
+  }
 }
