--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -35,7 +35,8 @@
     .image {
       cursor: pointer;
       img {
-        width: 200px;
+        max-width: 200px;
+        max-height: 200px;
       }
     }
   }
