--- a/src/components/CommentItem.scss
+++ b/src/components/CommentItem.scss
@@ -1,6 +1,8 @@
 li.comment-item {
   padding: 5px 0;
   display: flex;
+  align-items: center;
+
   .author {
     font-size: 14px;
     color: #aaa;
