--- a/src/components/CommentItem.scss
+++ b/src/components/CommentItem.scss
@@ -1,12 +1,13 @@
 li.comment-item {
   padding: 5px 0;
   display: flex;
-  align-items: center;
+  font-size: 14px;
+  color: #aaa;
 
   .author {
-    font-size: 14px;
-    color: #aaa;
     width: 40px;
+    display: flex;
+    align-items: center;
   }
   .content {
     flex: 1;
