최대 width 넘어갈 때 URL 개행처리

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -19,6 +19,7 @@
       .url {
         color: darkolivegreen;
         cursor: pointer;
+        word-break: break-all;
       }
       .description {
         margin-top: 10px;
